--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Page title</title>
 </head>
+
 <body>
 	<h1>Start</h1>
 	<p>Hello World</p>
-	<a href="https://www.w3schools.com">Link w3schools</a> 
+	<a href="https://www.w3schools.com">Link w3schools</a>
 	<br>
 	<img src="D:\AnhNen\background4K (82).jpg" alt="This is picture" width="2000" height="900">
 	<p style="color:red">This is a HTML</p>
@@ -16,10 +18,8 @@
 	<h1 style="font-family: cursive;">Hello every one</h1>
 	<h1 style="text-align: center;">Hello</h1>
 	<hr>
-	<pre style="text-align: center;">
-Hellow
-I Love 
-	</pre>
+	<pre style="text-align: center;">Hellow I Love </pre>
 
 </body>
+
 </html>
