fix file hello.html lan2

--- a/hello.html
+++ b/hello.html
@@ -18,9 +18,7 @@
     <h1 style="font-family: cursive;">Hello every one</h1>
     <h1 style="text-align: center;">Hello</h1>
     <hr>
-    <pre style="text-align: center;">
-Hellow
-I Love 
+    <pre style="text-align: center;">Hellow I Love you
 	</pre>
 
 </body>
